--- a/roles/macos-provisioner/tasks/install.yml
+++ b/roles/macos-provisioner/tasks/install.yml
@@ -5,6 +5,7 @@
   changed_when: result.stdout | regex_search('already installed')
   with_items: "{{ software_mac_app_store }}"
   tags: app-store
+  ignore_errors: true
 
 # Would like to use just `homebrew` module to install any software
 # However, homebrew module will report error with cask "is already installed".
@@ -14,12 +15,14 @@
     name: "{{ software_homebrew_cask }}"
     state: present
   tags: cask
+  ignore_errors: true
 
 - name: Install Tools (formulae)
   community.general.homebrew:
     name: "{{ software_homebrew_formulae }}"
     state: present
   tags: formulae
+  ignore_errors: true
 
 # Note, `vagrant plugin install` command is not idempotent and always installs plugin
 # https://github.com/hashicorp/vagrant/issues/12987
@@ -30,6 +33,7 @@
   changed_when: result.stdout | regex_search('Installed the plugin')
   with_items: "{{ vagrant_plugins }}"
   tags: vagrant
+  ignore_errors: true
 
 - name: Ensure custom folders are created
   ansible.builtin.file:
@@ -37,6 +41,7 @@
     state: directory
   loop: "{{ finder_folders }}"
   tags: finder
+  ignore_errors: true
 
 - name: Ensure side-bar items added to Finder
   ansible.builtin.command: "mysides add {{ item }}"
@@ -44,6 +49,7 @@
   changed_when: result.stdout | regex_search('Installed the plugin')
   with_items: "{{ finder_sidebar }}"
   tags: finder
+  ignore_errors: true
 
 - name: Create shortcuts
   ansible.builtin.copy:
@@ -52,6 +58,7 @@
     mode: "{{ item.mode }}"
   with_items: "{{ finder_shortcuts }}"
   tags: finder
+  ignore_errors: true
 
 - name: Create links
   ansible.builtin.file:
@@ -61,10 +68,13 @@
     mode: "{{ item.mode }}"
   with_items: "{{ finder_links }}"
   tags: finder
+  ignore_errors: true
 
 # Change Mac OS User Preferences via Command Line
 # https://pawelgrzybek.com/change-macos-user-preferences-via-command-line/
+# Bear in mind that some changes require you to restart an app or, occasionally, a full reboot of the operating system
 - name: Set system preferences
-  ansible.builtin.command: "defaults write {{ item.domain }} {{ item.key }} {{ item.value }}"
+  ansible.builtin.command: "defaults write {{ item.domain }} {{ item.key }} {{ item.type }} {{ item.value }} && {{ item.reboot }}"
   with_items: "{{ system_prefs }}"
   tags: system
+  ignore_errors: true
