--- a/roles/macos_provisioner/tasks/prepare.yml
+++ b/roles/macos_provisioner/tasks/prepare.yml
@@ -5,17 +5,17 @@
 
 - name: Run brew cleanup
   ansible.builtin.command: brew cleanup
-  register: results
+  changed_when: true
 
 - name: Run brew doctor
   ansible.builtin.command: brew doctor
   register: results
-  failed_when: false
+  changed_when: true
 
 - name: List system updates (install with `softwareupdate --install`)
   ansible.builtin.command: softwareupdate --list
   register: results
-  failed_when: false
+  changed_when: false
 
 - name: Install pre-reqs (formulae)
   community.general.homebrew:
