Add git global ignore file

--- a/roles/macos_provisioner/tasks/prepare.yml
+++ b/roles/macos_provisioner/tasks/prepare.yml
@@ -49,3 +49,8 @@
     name: init.defaultBranch
     scope: global
     value: main
+- name: Set git config - default ignored files
+  community.general.git_config:
+    name: core.excludesfile
+    scope: global
+    value: ~/.gitignore
